# adaptive_estimation

./: .gitignore  README.md  cominterface_ros2.py  launch_sim.py
.obsidian/: community-plugins.json  hotkeys.json  workspace.json
cad/: Inverted_pendulum.stp  Readme.Md  stepper_box.stl
cad/ipt/: Inverted_pendulum.iam  encoder.ipt  encoder.stl  pendulum.ipt  pendulum.stl  readme.Md  stepper_box.ipt
cad/qServo/: qServo.usd
docker/: Dockerfile.imo  Dockerfile.tpc
docker/scripts/: workspace-entrypoint.sh
notes/tPC Inverted Pendulum/: BOM.md  Proposal - Inverted Penulum.canvas  Todo.md
scripts/: .isaac_ros_common-config  README.md  docker_deploy.sh  run_dev.sh
simulator/: params.py
simulator/robot/: pendulum.py  (+3 more)
tpc/: .gitignore  README.md  get_config.py  main.py  pixi.toml  pyproject.toml
tpc/debug/: debug_service_test.py
tpc/ros_workspace/src/tpc_ros/: CMakeLists.txt  package.xml
tpc/ros_workspace/src/tpc_ros/srv/: ActionRequest.srv
tpc/src/agent/: agent.py
tpc/src/simulator/: simulator.py
tpc/src/tpc/: pyproject.toml
tpc/src/tpc/agent/: __init__.py  agent.py  base.py  pendulum_agent.py
tpc/src/tpc/communication/: base.py
tpc/src/tpc/config/: __init__.py  config.py  root.py
tpc/src/tpc/config/agent/: agent.py  base.py  pendulum_agent.py
tpc/src/tpc/config/experiment/: default.yaml  dev.yaml  gymnasium.yaml  gymnasium_pendulum.yaml
tpc/src/tpc/config/simulator/: base.py  gymnasium_simulator.py  pendulumSimulator.py
tpc/src/tpc/config/visualiser/: base.py  pendulum_visualiser.py
tpc/src/tpc/simulator/: __init__.py  base.py  gymnasium_simulator.py  simulator.py
tpc/src/tpc/tests/communication/: test_ros2_communication_handles.py
tpc/src/tpc/utils/: config.py  control.py  types.py  utils.py
tpc/src/tpc/visualiser/: __init__.py  visualiser.py
tpc/src/visualiser/: visualiser.py
videos/: Readme.Md
(+67 files in other folders)
