[project]
authors = [{name = "Nicklas", email = "gitnicklas@pm.me"}]
description = "Walk like your feet are kissing the earth."
dependencies = []
name = "tpc"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tpc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.1,<3"
omegaconf = ">=2.3.0,<3"
python = ">=3.12.6,<4"
