[project]
authors = [{name = "Nicklas", email = "gitnicklas@pm.me"}]
description = "Walk like your feet are kissing the earth."
dependencies = ["gymnasium[classic-control]"]
name = "tpc"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tpc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "=1.23.5"
omegaconf = ">=2.3.0,<3"
python = "*"
gymnasium = "*"
pygame = ">=2.6.1,<3"
loguru = ">=0.7.2,<0.8"
termcolor = ">=2.5.0,<3"
matplotlib = ">=3.9.2,<4"
simple-pid = ">=1.0.1,<2"
