[project]
authors = [{name = "Nicklas", email = "gitnicklas@pm.me"}]
description = "Walk like your feet are kissing the earth."
dependencies = [
    "numpy >= 1.23.5",
    "omegaconf >=2.3.0",
    "gymnasium",
    "pygame >= 2.6.1",
    "loguru >= 0.7.2",
    "termcolor >=2.5.0",
    "matplotlib >= 3.9.2",
    "simple-pid >= 1.0.1",
]
name = "tpc"
requires-python = ">= 3.10"
version = "0.1.0"

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]

